--- a/style.css
+++ b/style.css
@@ -18,10 +18,16 @@ p{
 .bg1{
     background-image: url(images/bg-1.png);
     background-repeat: no-repeat;
-    background-position: center;
-}bg2{
+    padding: 70px;
+}
+.bg2{
     background-image: url(images/bg-2.png);
     background-repeat: no-repeat;
+    padding-bottom: 60px;
+    padding-left: 250px;
+   background-position: bottom left ;
+   margin: 0;
+  
 }
 .card{
     border: none;
@@ -33,11 +39,11 @@ p{
     margin: 10px;
 }
 hr{
-    width: 9%;
-    background-image: linear-gradient(to right ,red , #df4453);
+    width: 15%;
+    background-image: linear-gradient(to bottom ,rgba(0, 0, 0, 0.681) , rgb(189, 37, 37));
     margin: auto;
-    height: 8px;
-    border-radius: 15px;
+    height: 10px;
+    border-radius: 5px;
 }
 .item{
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.201);
